# botty

./: CMakeLists.txt  ExchangeConnection.cpp  JsonParser.hpp  OptimalOrders.cpp  OptimalOrders.hpp  README.md  main.cpp  order.hpp  transfer_and_run.sh
src/: ExchangeConnection.cpp  ExchangeConnection.hpp  JsonParser.cpp  JsonParser.hpp  OptimalOrders.cpp  OptimalOrders.hpp  OrderResponse.hpp  PathFinder.cpp  PathFinder.hpp  balance.hpp  main.cpp  matrix.cpp  matrix.hpp
